Optimize jpgs, gifs.

--- a/source/egg.html.erb
+++ b/source/egg.html.erb
@@ -3,7 +3,7 @@ title: kidclampdown - egg
 ---
 
 <header class="egg">
-    <source srcset="images/jarod.gif" type="image/gif">
-    <img class="egg__image" src="images/jarod.gif" alt="jarod.gif">
+    <source srcset="images/jarod.jpg" type="image/jpg">
+    <img class="egg__image" src="images/jarod.jpg" alt="jarod.jpg">
   </picture>
 </header>
