--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -74,8 +74,8 @@ body {
     }
   }
     .nav__list-item {
-      padding-top: $spacing-unit;
-      padding-bottom: $spacing-unit;
+      padding-top: $spacing-unit / 2;
+      padding-bottom: $spacing-unit / 2;
 
       &:first-child {
         padding-top: 0;
@@ -100,9 +100,7 @@ body {
           transition: width ease-in-out 200ms;
         }
 
-        &:hover,
-        &:active,
-        &:focus {
+        &:hover {
           &:before {
             width: 100%;
           }
